app/assets/stylesheets/frontend/views/_policies.scss
.policies-index {

  .block-2 h1 {
  //  @include sans-15;
  }
  .alphabetical-list .alphabetical-row {
    p {
    //  @include sans-15;
    }
    .inner {
      padding-top: $gutter-one-third;
    }
    li {
      a {
      //  @include sans-15;
      }
    }

    @media (min-width: 768px) {
      .inner {
        padding: $gutter-two-thirds 0 $gutter;
        min-height: $gutter*2;
      }
      li {
        width: 100%;
        float: none;
        display: block;
      }
    }
  }
}

.policy {

  .content-fixed {
    position: fixed!important;
    top: 0;
    width: 13.6%;
    @media (max-width: 768px) {
      position: relative!important;
      width: 100%;
    }
  }

  .meta-topic {
    @include core-14;
    overflow: hidden;
    .notice {
      display: inline;
      float: left;
      width: 50%;
      p {
      background: none;
      }
    }
    p {
      display: inline;
    }
    ul, li {
      display: inline;
      margin: 0;
      padding: 0;
    }
    @media (min-width: 768px) {
      display: inline;
      float: left;
      width: 47.5%;
    }
  }

  .meta {
    @include core-14;
    position: relative;
    clear: both;
    margin-top: $gutter-one-third;
    white-space: nowrap;

    .metadata {
      display: inline;
      line-height: 35px;
    }
    .change-notes {
      margin-left: $gutter-one-third;

      &.toggleable .overlay {
        left: -100%;
        .arrow {
          left: 70%;
        }
      }
    }

    @media (min-width: 768px) {
      clear: none;
      float: right;
      margin-top: 2px;
      width: 47.5%;
      text-align: right;
    }
}


  .block-2 {
    width: 25%;
  }
  .block-3 {
    width: 75%;
  }

    @media (max-width: 768px) {
      .block-1, .block-2, .block-3 {
        display: block;
        float: none;
        width: 100%;
      }
    }


  .supporting-page-title {
    @include core-27;
    margin-bottom: $gutter;
  }

  .contextual-info {
      @include core-14;
    nav {
      margin-top: 0;
    }
  }

  #document-organisations + #document-ministers,
  #policy_team,
  #document-organisations {
    background: none;
    margin: 0 0 0 25%;
    padding-left: 0;
    padding-top: 0;
    @media (max-width: 640px) {
      margin: 0;
    }
  }

  #policy_team {
    p {
      @include sans-18;
    }
  }

  #document-ministers {
    margin-bottom: $gutter;
    overflow: hidden;
    @include core-14;
    .ministers {
      p {
        a {
          white-space: nowrap;
        }
      }
    }
  }

  .current-appointee {
    margin-right: $gutter-half;
  }

  .page-header {
    padding: $gutter 0 40px;
    h1 {
      clear: both;
      text-align: center;
      max-width: 18em;
      margin: 0 auto;
    }
      @media (max-width: 640px) {
        padding: $gutter-two-thirds 0 $gutter;
        h1 {
        text-align: left;
        max-width: 100%;
        }
      }
  }

  .policy-parts {
    ol {
      list-style: decimal;
    }
  }



  .organisation-logo-small {
    @include sans-20;
    background-position: 8px center;
    line-height: 1;
    padding: 2px 0 5px 46px;
  }

  .govspeak {
    margin-top: $gutter!important;
    h2 {
      position: relative;
    }
  }

  .supporting_pages {
    li {
      border-style: solid;
      border-color: $cool-grey $light-blue-grey $white $cool-grey;
      border-width: 0 1px;
      padding: 0!important;
        a {
        background-color: $cool-grey;
        border-bottom: 1px solid $white;
        display: block;
        min-height: 50px;
        padding: $gutter-two-thirds;
        overflow: hidden;
        text-decoration: none;
        z-index: 1;
        &:hover, &:focus {
          background-color: lighten($cool-grey, 5%);
          @include transition(background, 0.5s, ease)
        }
      }
    }
    li.active {
        a {
        background-color: $white;
      }
      border-color: $light-blue-grey $white $light-blue-grey $light-blue-grey;
      border-width: 1px;
    }
    li:first-child.active {
      border-top-color: $white;
    }
  }

  // this is shown when there's no policy-navigation
  .no-navigation {
    border-bottom: 1px solid $light-blue-grey;
    padding-bottom: 50px;
    // this margin-bottom depends on font size, but we can't add ems and px
    margin-bottom: $gutter + 34px;
  }

  .policy-navigation {
    border-top: 1px solid $light-blue-grey;
    display: block;
    margin-top: 70px;
    width: auto;
    ul {
      @include border-radius(0.6em);
      background-color: lighten($charcoal-grey, 10%);
      display: inline-block;
      margin: -30px auto $gutter 25%;
      overflow: hidden;
      padding: $gutter-half*0.4;
      position: relative;
      //width: 50%;
         -moz-box-sizing: border-box;
          -ms-box-sizing: border-box;
           -o-box-sizing: border-box;
      -webkit-box-sizing: border-box;
              box-sizing: border-box;
      li {
        float: left;
        display: inline;
        margin-right: $gutter-half*0.4;
        width: 11em;

        a {
          @include core-19;
          font-family: $NTA-Bold;
          color: $white;
          display: block;
          padding: $gutter-one-third 0;
          @include border-radius(0.3em);
          text-align: center;
          text-decoration: none;
          width: auto;
          opacity: 0.75;
          &.current {
            opacity: 0.85;
            @include gradient(#bbb, #888);
          }
          &:hover, &:focus {
            opacity: 1;
          }
        }
      }
      li:last-child {
        margin-right: 0;
      }
    }
    @media (max-width: 768px) {
      ul {
        //margin-left: 20%;
        li {
          width: 8em;
        }
      }
    }
    @media (max-width: 640px) {
          margin: $gutter 0 $gutter-two-thirds;
          border: none;
        ul {
          margin: 0;
          width: 100%;
          li {
            width: 32%;
          }
        }
    }
  }

  #case-studies {
    h1 {
      // from _document.scss h2
      @include core-27;
      color: lighten($body-text, 50%);
      margin-top: $gutter;
      @media (max-width: 640px) {
        margin-top: $gutter-half;
      }
    }
    li {
      // from _document.scss li
      width: 90%;
      @include core-19;
      margin-left: $gutter*1.2;

      li {
        margin-left: $gutter;
      }

      @media (min-width: 768px) {
        margin-left: 0;

        li {
          margin-left: $gutter*2;
        }
      }
    }
  }

}

  .policies-activities {
    .policy {
      .block-1, .block-2 {
        display: block;
        float: none;
        width: 100%;
      }
      .latest_documents {
        ul {
          margin-top: 0;
        li {
          border: 1px solid $light-blue-grey;
          border-width: 0 0 1px 0;
          overflow: hidden;
          margin-top: 0;
          padding: $gutter-one-third 0;
          a, .metadata {
            float: left;
            display: inline;
            width: 70%;
            padding: 0;
          }
          .metadata {
            padding-top: $gutter-half;
            width: 30%;
            .document_type {
              float: right;
            }
          }
        }
        li:first-child {
          border-width: 1px 0;
        }
        li:first-child, li:nth-child(2), li:nth-child(3) {
          overflow: hidden;
          a {
            font-size: 3rem;
            display: block;
            float: none;
            width: 100%;
            @media (max-width: 768px) {
              font-size: 2rem;
            }
          }
          .metadata {
            display: block;
            float: none;
            width: 100%;
          }
        }
      }
      }
    }
  }

